// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should match the snapshot 1`] = `
<div
  className="App"
>
  <Header />
  <Nav />
  <Switch>
    <Route
      path="/crypto-coins/:id"
      render={[Function]}
    />
    <Route
      path="/national-geographic/:id"
      render={[Function]}
    />
    <Route
      path="/new-scientist/:id"
      render={[Function]}
    />
    <Route
      path="/favorites/:id"
      render={[Function]}
    />
    <Route
      component={[Function]}
      path="/national-geographic"
    />
    <Route
      component={[Function]}
      path="/new-scientist"
    />
    <Route
      component={[Function]}
      path="/crypto-coins"
    />
    <Route
      component={[Function]}
      path="/favorites"
    />
    <Route
      component={[Function]}
      exact={true}
      path="/"
    />
    <Route
      component={[Function]}
    />
  </Switch>
  <p
    className="attribution"
  >
    Powered by
     
    <a
      className="attribution-link"
      href="https://newsapi.org/"
    >
      News API
    </a>
  </p>
</div>
`;

exports[`App should match the snapshot when isLoading is true 1`] = `
<div
  className="App"
>
  <Header />
  <Nav />
  <Loader />
  <p
    className="attribution"
  >
    Powered by
     
    <a
      className="attribution-link"
      href="https://newsapi.org/"
    >
      News API
    </a>
  </p>
</div>
`;
